[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ninapro_preprocess"
dynamic = ["version", "readme"]
dependencies = [
    'dexterous_bioprosthesis_2021_raw_datasets @ git+https://github.com/ptrajdos/dexterous-bioprosthesis-2021-raw-dataset.git',  
    'pandas',
    'tabulate==0.9.0',
  
]
requires-python = ">=3.10"
authors = [
  {name = "Pawel Trajdos", email = "pawel.trajdos@pwr.edu.pl"},
]
maintainers = [
  {name = "Pawel Trajdos", email = "pawel.trajdos@pwr.edu.pl"}
]
description = "Preprocessing scripts for ninapro"

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E.*"]
keywords = ["emg"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools.dynamic]
version = {attr = "ninapro_preprocess.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md"]}

[project.urls]
Repository = "https://github.com/ptrajdos/ninapro_preprocess.git"

[tool.setuptools]
packages = { find = { include = ["ninapro_preprocess", "ninapro_preprocess.*"] } }

[project.scripts]
extractor_DB3_A = "ninapro_preprocess.extractor_DB3_A:main"
